# data_redesign_method

./: .gitignore  CLAUDE.md  LICENSE  README.md  REFACTORING_PROGRESS.md  app.py  pyproject.toml  requirements.txt  troubleshooting.md
.claude/commands/: expert-chief.md  expert-context.md  expert-etl.md  expert-feature.md  expert-flow.md  expert-metric.md  expert-schema.md
.specify/memory/: constitution.md
.streamlit/: config.toml  secrets.toml.example
features/: ascent_complexity.feature  complexity_ascent.feature  complexity_descent.feature  measure_complexity.feature  memory.feature  tidy_data.feature
features/steps/: complexity_ascent.py  complexity_memory.py  descent_complexity.py  measure_complexity.py  tidy_data.py
intuitiveness/: __init__.py  agent.py  complexity.py  discovery.py  interactive.py  models.py  navigation.py  neo4j_client.py  neo4j_writer.py  redesign.py  streamlit_app.py  utils.py
intuitiveness/app/: __init__.py  ascent_controller.py  free_mode.py  guided_mode.py  initialization.py  main.py  sidebar.py
intuitiveness/ascent/: __init__.py  dimensions.py  enrichment.py  operations.py
intuitiveness/catalog/: __init__.py  models.py  search.py  storage.py
intuitiveness/data_sources/: __init__.py  datagouv.py  mcp_client.py  nl_query.py  quality_filter.py
intuitiveness/descent/: __init__.py  semantic_join.py
myenv/: pyvenv.cfg
scientific_article/: bibliography.md  literature_review.md  v2_intuitive_datasets_revised.md
skills/: __init__.py
specs/: expert-analysis-synthesis.md
test_data/: test_description
tests/e2e/: conftest.py  (+4 more)
(+316 files in other folders)
